--- a/_site.yml
+++ b/_site.yml
@@ -5,14 +5,12 @@ navbar:
   right:
     - text: "About Us"
       href: about.html
-    - text: "Trend Graphs"
+    - text: "Exploratory Graphs"
       href: plotly.html
     - text: "Regression Analysis"
       href: regression.html
     - text: "Maps"
       href: map.html
-    - icon: fa-envelope fa-lg
-      href: mailto:<you@youremail.com>
     - icon: fa-github fa-lg
       href: http://github.com/<YOUR_GH_NAME>/
 output:
